--- a/First_Semester.html
+++ b/First_Semester.html
@@ -120,8 +120,8 @@
   <p>اختر الوحدة التي تريد استكشافها:</p>
 
   <div class="card-container">
-    <div class="card" onclick="window.location.href='First_Semester_Unit1'">Unit1</div>
-    <div class="card" onclick="window.location.href='First_Semester_Unit2'">Unit2</div>
+    <div class="card" onclick="window.location.href='First_Semester_Unit1.html'">Unit1</div>
+    <div class="card" onclick="window.location.href='First_Semester_Unit2.html'">Unit2</div>
   </div>
 
   <a href="index.html" class="button">⬅ العودة إلى الرئيسية</a>
